[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=3.4",
    "scikit-build",
    "cmake",
    "ninja; platform_system!='Windows'"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/pylibmagic/_version.py"


[tool.cibuildwheel]
test-extras = ["test"]
test-command = "pytest {project}/tests"
archs = ["auto64"]
before-all = "yum install autoconf automake"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add autoconf automake"

[[tool.cibuildwheel.overrides]]
select = "*-macosx*"
before-all = "brew install autoconf automake libtool"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config", "-m", "not isolate"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = [
    "tests",
]
markers = [
    "isolate",
]
log_cli_level = "INFO"


[tool.pycln]
all = true

[tool.mypy]
files = "src"
python_version = "3.7"
warn_unused_configs = true
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[tool.check-manifest]
ignore = [
    ".github/**",
    "docs/**",
    ".pre-commit-config.yaml",
    ".readthedocs.yml",
    "src/*/_version.py",
    "noxfile.py",
]

[tool.isort]
profile = "black"


[tool.pylint]
master.py-version = "3.7"
master.ignore-paths= ["src/pylibmagic/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "wrong-import-position",
]
