[metadata]
name = pylibmagic
description = scikit-build project with CMake for compiling libmagic
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/kratsg/pylibmagic
author = Giordon Stark
author_email = kratsg@gmail.com
maintainer = Giordon Stark
maintainer_email = kratsg@gmail.com
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
project_urls =
    Documentation = https://pylibmagic.readthedocs.io/
    Bug Tracker = https://github.com/kratsg/pylibmagic/issues
    Discussions = https://github.com/kratsg/pylibmagic/discussions
    Changelog = https://github.com/kratsg/pylibmagic/releases

[options]
packages = find:
install_requires =
    importlib-resources;python_version < "3.9"
    typing-extensions>=3.7;python_version<'3.8'
python_requires = >=3.7
include_package_data = True
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6
    tbump>=6.7.0
    twine
docs =
    Sphinx>=4.0
    myst-parser>=0.13
    sphinx-book-theme>=0.1.0
    sphinx-copybutton
test =
    pytest>=6
    python-magic

[flake8]
extend-ignore = E203, E501, E722, B950
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T
    noxfile.py: T
